# XYZ_robot

./: .gitignore  README.md  camera_sample_code.py  reinforcement_learning_gym.py  test.py
gazebo/: gazebo_install.py
reinforcement_learning_gym/: q-learning_5*5.py
ros_pkg/test/src/my_cpp_pkg/: CMakeLists.txt
ros_pkg/test/src/my_cpp_pkg/src/: my_node.cpp
ros_pkg/urdf_tutorial/: config.tar  meshes.tar  package.xml  setup.py
ros_pkg/ws_arm/: README.md
ros_pkg/ws_car/: README.md
ws_sim/log/: latest_build
yolo_object_decting.py/: README.dataset.txt  README.roboflow.txt  assessment.py  assessment_1.py  data.yaml  yolov8_train.py
yolo_object_decting.py/train/: labels.cache
yolo_object_decting.py/valid/: labels.cache
파이썬 실습 자료/01차시 - 파이썬 이해 및 설치/: 0921.ipynb  1.0 안녕.ipynb  1.1 파이썬 설치 및 메뉴.ipynb  1.2 기본구조.ipynb  1.3 기초 산술 연산.ipynb  1.4 입출력.ipynb  1.5 과제 수행.ipynb
파이썬 실습 자료/02차시 - 파이썬 변수,데이터 타입/: 2.1 데이터 변수.ipynb  2.4 불리언(bool).ipynb
파이썬 실습 자료/03차시 - 파이썬 연산자/: 3.1 연산자.ipynb  3.2 파일 입출력.ipynb  file.txt
파이썬 실습 자료/04차시 - 파이썬 if 조건문/: 4.1 if 조건문.ipynb
파이썬 실습 자료/05차시 - 파이썬 for문/: 5.1 for문.ipynb
파이썬 실습 자료/06차시 - 파이썬 while문/: 6차시 while문.ipynb
파이썬 실습 자료/07차시 - 파이썬 함수,클래스-모듈/: 7.1 함수.ipynb  7.2 모듈.ipynb  7.3 클래스.ipynb  7.4 패키지.ipynb  7.5 쓰레드.ipynb  Tesseract_ocr.ipynb  calcu.py  name.ipynb
파이썬 실습 자료/08차시 - 파이썬 문자열 관리-문자열,파일/: 8.1 문자열.ipynb  8.2 파일입출력.ipynb  live_.txt  live_line.txt  live_lines.txt  members.csv
파이썬 실습 자료/09차시 - 파이썬 리스트와 튜플-리스트,튜플/: 9.1 리스트.ipynb  9.2 투플.ipynb
파이썬 실습 자료/10차시 - 파이썬 사전과 집합-사전,집합/: 10.1 딕셔너리.ipynb  10.2 집합.ipynb  (+1 more)
(+189 files in other folders)
